--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Sansita');
+body {
+    background-color: #662D91
+}
+
+.text_main {
+    font-family: 'Sansita', sans-serif;
+}
+
+.text_body {
+    font-family: 'Open Sans', sans-serif;
+}
