--- a/src/app/splash/splash.component.html
+++ b/src/app/splash/splash.component.html
@@ -1,13 +1,47 @@
 <div class="container_splash">
     <div class="nav-splash">
-        <h1 class="text_main padding">Gamebox</h1>
+        <div class="nav_splash_left">
+            <img src="../assets/Asset 11.svg" class="nav_img">
+            <h1 class="text_main padding">Gamebox</h1>
+        </div>
         <div class="nav_spash_right">
-            <a class="nav" href="#">blank</a>
-            <a class="nav" href="#">blank</a>
-            <a class="nav" href="#">blank</a>
+            <a class="nav text_body" href="#">Features</a>
+            <a class="nav text_body" href="#">picks</a>
+            <a class="nav text_body" href="#">signup</a>
+
+            <div class="log_box">
+                <a class="text_body">Log-in</a>
+            </div>
         </div>
     </div>
-    <h1 class="text_main">Title text working</h1>
-    <p class="text_body">Body text working</p>
-    <div class="top_shape"></div>
+    <div class="top_shape_container">
+        <img src="../assets/Asset 13.svg" class="splash_shape">
+        <div class="top_shape_detail">
+            <div class="top_shape_text">
+                <h1 class="text_main big">Gamebox</h1>
+                <div class="line"></div>
+                <p class="text_main center">Create events on the fly</p>
+
+            </div>
+            <img src="../assets/Asset 11.svg" class="big_img">
+        </div>
+    </div>
+    <div class="splash_feature_container">
+        <p class="text_main big_alt">Features</p>
+        <div class="text_points">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis explicabo laborum voluptatibus sint, corrupti maiores tempora a asperiores. Mollitia repellendus tempora illum non ipsa commodi, provident quod magni amet ipsam.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis explicabo laborum voluptatibus sint, corrupti maiores tempora a asperiores. Mollitia repellendus tempora illum non ipsa commodi, provident quod magni amet ipsam.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis explicabo laborum voluptatibus sint, corrupti maiores tempora a asperiores. Mollitia repellendus tempora illum non ipsa commodi, provident quod magni amet ipsam.</p>
+
+        </div>
+    </div>
+    <div class="bot_shape_container">
+        <img src="../assets/Asset 14.svg" class="splash_shape_bot">
+        <div class="call_to_action">
+            <p class="text_main big">Sign up</p>
+            <div class="call_button">
+                <a href="#" class="text_main link">Today!!</a>
+            </div>
+        </div>
+    </div>
 </div>
