--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Sansita');
 body {
-    background-color: #662D91
+    background-color: #662D91;
 }
 
 .text_main {
