--- a/src/app/splash/splash.component.css
+++ b/src/app/splash/splash.component.css
@@ -1,28 +1,179 @@
 .container_splash {
-    width: 50%;
+    max-width: 80%;
+    min-width: 80%;
     height: 100em;
     margin: 0 auto;
     background-color: #FFFFFF;
+    box-shadow: 0px 5px 20px black;
+    display: flex;
+    flex-direction: column;
 }
 
+.splash_feature_container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    height: 32em;
+}
+
+.top_shape_container {
+    width: 100%;
+    display: flex;
+    height: 33em;
+    justify-content: center;
+    align-items: center;
+}
+
+.bot_shape_container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.top_shape_detail {
+    display: flex;
+    position: relative;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    z-index: 8;
+    width: 50em;
+    ;
+}
+
+.call_to_action {
+    position: absolute;
+    display: flex;
+    flex-wrap: wrap;
+    width: 10em;
+    justify-content: center;
+    align-self: center;
+}
+
+.big {
+    font-size: 40pt;
+    text-align: center;
+    color: #FFFFFF;
+    padding: 0;
+}
+
+.big_alt {
+    font-size: 40pt;
+    text-align: center;
+    color: #000000;
+}
+
+
+/* #662D91 */
+
 .nav-splash {
-    background-color: blue;
+    background-color: #FFFFFF;
     width: 100%;
     height: 3em;
     display: flex;
     justify-content: space-between;
     align-items: center;
     box-shadow: 0px 5px 10px black;
+    align-self: flex-start;
+    z-index: 7;
+}
+
+.nav_splash_left {
+    display: flex;
+    width: 20em;
+    height: 100%;
+    align-items: center;
+    margin-left: 10px;
 }
 
 .nav_spash_right {
     display: flex;
     height: 100%;
     align-items: center;
-    width: 4em;
-    justify-content: space-between;
+    width: 30em;
+    background-color: white;
+    justify-content: space-evenly;
 }
 
 .padding {
     margin-left: 8px;
+}
+
+.log_box {
+    background-color: #662D91;
+    width: 3em;
+    height: 50%;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 5px;
+    color: #FFFFFF;
+}
+
+.nav {
+    text-decoration: none;
+    color: #000000;
+}
+
+.nav_img {
+    width: 4em;
+    display: block;
+}
+
+.splash_shape {
+    z-index: 1;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+.splash_shape_bot {
+    display: flex;
+    align-self: flex-end;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+}
+
+.big_img {
+    width: 30em;
+}
+
+.line {
+    width: 100%;
+    height: 4px;
+    background-color: #FFFFFF;
+    padding: 0;
+    margin: 0;
+}
+
+.center {
+    text-align: center;
+    font-size: 20pt;
+    color: #FFFFFF;
+}
+
+.call_button {
+    background-color: #4F345A;
+    padding: 20px;
+    height: 2em;
+    color: #FFFFFF;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    font-family: 'Sansita', sans-serif;
+}
+
+.text_points {
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.link {
+    text-decoration: none;
+    color: #FFFFFF;
+    font-size: 18pt;
 }
