--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-splash></app-splash>
+<!-- <app-splash></app-splash> -->
+<!-- <router-outlet></router-outlet> -->
+<app-log-sign></app-log-sign>
