--- a/src/app/splash/splash.component.css
+++ b/src/app/splash/splash.component.css
@@ -52,7 +52,7 @@
 }
 
 .big {
-    font-size: 40pt;
+    font-size: 50pt;
     text-align: center;
     color: #FFFFFF;
     padding: 0;
@@ -62,10 +62,8 @@
     font-size: 40pt;
     text-align: center;
     color: #000000;
+    height: 3px;
 }
-
-
-/* #662D91 */
 
 .nav-splash {
     background-color: #FFFFFF;
@@ -168,8 +166,8 @@
 }
 
 .text_points {
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-left: 70px;
+    margin-right: 70px;
 }
 
 .link {
