--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,1 @@
-<!-- <app-splash></app-splash> -->
-<!-- <router-outlet></router-outlet> -->
-<app-log-sign></app-log-sign>
+<router-outlet></router-outlet>
