--- a/src/app/log-sign/log-sign.component.html
+++ b/src/app/log-sign/log-sign.component.html
@@ -5,8 +5,10 @@
             <p (click)="alert()">sign up | Login</p>
             <div id="signup">
                 <form action="">
-                    <label for=""></label>
-
+                    <label for="">Username</label>
+                    <input>
+                    <label for="">Password</label>
+                    <input>
                 </form>
             </div>
             <div id="Login">
