--- a/src/app/splash/splash.component.html
+++ b/src/app/splash/splash.component.html
@@ -7,10 +7,10 @@
         <div class="nav_spash_right">
             <a class="nav text_body" href="#">Features</a>
             <a class="nav text_body" href="#">picks</a>
-            <a class="nav text_body" href="#">signup</a>
+            <a class="nav text_body" routerLink="../LogSign">signup</a>
 
             <div class="log_box">
-                <a class="text_body">Log-in</a>
+                <a routerLink="../LogSign" class="text_body link_fix">Log-in</a>
             </div>
         </div>
     </div>
@@ -40,7 +40,7 @@
         <div class="call_to_action">
             <p class="text_main big">Sign up</p>
             <div class="call_button">
-                <a href="#" class="text_main link">Today!!</a>
+                <a href="#" routerLink="../LogSign" class="text_main link">Today!!</a>
             </div>
         </div>
     </div>
