--- a/src/app/log-sign/log-sign.component.css
+++ b/src/app/log-sign/log-sign.component.css
@@ -21,8 +21,6 @@
     width: 20em;
     background-color: #FFFFFF;
     margin: 20px;
-    display: grid;
-    grid-template-columns: 1fr;
 }
 
 .asset_signlog {
@@ -31,4 +29,7 @@
 
 .logo {
     width: 250px;
+    position: relative;
+    margin-top: 5px;
+    align-self: flex-start;
 }
