--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -1,5 +1,31 @@
 <div class="overLay">
     <div id="container_content">
-        <p (click)="accountOff()">X</p>
+        <div class="container_title">
+            <h1 class="text_main text_white"> My Account</h1>
+            <p (click)="accountOff()">X</p>
+        </div>
+        <div class="container_input">
+            <div class="account_graphic">
+                <img src="../assets/Asset 11.svg" class="img_size">
+                <h1 class="text_main text_white align">Boxy2110</h1>
+            </div>
+            <div class="account_input">
+                <div class="container_password">
+                    <h1 class="text_main text_white">change Password</h1>
+                    <form>
+                        <label for="old_pwd">Old password</label>
+                        <input>
+                        <label for="old_pwd">Old password</label>
+                        <input>
+                        <button>Submit</button>
+                    </form>
+                </div>
+                <div class="container_gameClear">
+                    <h1 class="text_main text_white">Clear GamesList</h1>
+                    <p>This will completely empty your gamelist. You have been warned.</p>
+                    <button class="text_main">Purge!!</button>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
