--- a/src/app/gamelist/gamelist.component.html
+++ b/src/app/gamelist/gamelist.component.html
@@ -1,5 +1,12 @@
 <div class="overLay">
     <div id="container_content">
-        <p (click)="gameListOff()">X</p>
+        <div class="container_title">
+            <h1 class="text_main text_white"> GamesList</h1>
+            <p>+</p>
+            <h2>favorites</h2>
+            <h2>sortby</h2>
+            <p (click)="gameListOff()">X</p>
+        </div>
+
     </div>
 </div>
