--- a/src/app/account/account.component.css
+++ b/src/app/account/account.component.css
@@ -17,4 +17,46 @@
     width: 48em;
     height: 70%;
     opacity: 1.0;
+    display: flex;
+    flex-direction: column;
+}
+
+.container_title {
+    width: 100%;
+    height: 5em;
+    display: flex;
+    justify-content: space-between;
+    margin-left: 5px;
+    margin-right: 5px;
+    align-items: center;
+}
+
+.container_input {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.account_graphic {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.account_input {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.img_size {
+    width: 100%;
+}
+
+.align {
+    text-align: center;
 }
