--- a/src/app/calender-create/calender-create.component.css
+++ b/src/app/calender-create/calender-create.component.css
@@ -37,3 +37,13 @@
     margin-right: 10px;
     margin-bottom: 10px;
 }
+
+.container_title {
+    width: 100%;
+    height: 5em;
+    display: flex;
+    justify-content: space-between;
+    margin-left: 5px;
+    margin-right: 5px;
+    align-items: center;
+}
