--- a/src/app/gamelist/gamelist.component.css
+++ b/src/app/gamelist/gamelist.component.css
@@ -18,3 +18,13 @@
     height: 70%;
     opacity: 1.0;
 }
+
+.container_title {
+    width: 100%;
+    height: 5em;
+    display: flex;
+    justify-content: space-between;
+    margin-left: 5px;
+    margin-right: 5px;
+    align-items: center;
+}
