--- a/src/app/gamelist/gamelist.component.html
+++ b/src/app/gamelist/gamelist.component.html
@@ -2,10 +2,10 @@
     <div id="container_content">
         <div class="container_title">
             <h1 class="text_main text_white"> GamesList</h1>
-            <p>+</p>
-            <h2>favorites</h2>
-            <h2>sortby</h2>
-            <p (click)="gameListOff()">X</p>
+            <p class="text_main page_symbol">+</p>
+            <h2 class="text_white text_main">favorites</h2>
+            <h2 class="text_white text_main">sortby</h2>
+            <p (click)="gameListOff()" class="text_main page_symbol">X</p>
         </div>
 
     </div>
