--- a/src/app/account/account.component.css
+++ b/src/app/account/account.component.css
@@ -22,7 +22,7 @@
 }
 
 .container_title {
-    width: 100%;
+    width: 95%;
     height: 5em;
     display: flex;
     justify-content: space-between;
@@ -36,6 +36,12 @@
     height: 100%;
     display: flex;
     justify-content: space-between;
+}
+
+.input_password {
+    width: 100%;
+    height: 6em;
+    display: flex;
 }
 
 .account_graphic {
@@ -59,4 +65,36 @@
 
 .align {
     text-align: center;
+}
+
+.btn_purge {
+    text-decoration: false;
+    border-style: none;
+    background-color: #f44242;
+    font-size: 18pt;
+    padding: 10px;
+    color: #ffffff;
+}
+
+.btn_purge:hover {
+    background-color: #ed4242;
+    transition: 0.5s;
+}
+
+.right_margin {
+    margin-right: 60px;
+}
+
+.btn_change {
+    text-decoration: none;
+    border-style: none;
+    font-size: 18pt;
+    padding: 10px;
+    color: #ffffff;
+    background-color: #29ABE2;
+    justify-self: flex-end;
+}
+
+.form-group {
+    display: block;
 }
