--- a/src/app/calender-create/calender-create.component.css
+++ b/src/app/calender-create/calender-create.component.css
@@ -5,33 +5,34 @@
     position: fixed;
     left: 0;
     top: 0;
-    z-index: 10;
+    z-index: 9;
     display: flex;
     justify-content: center;
     align-items: center;
-    /* opacity: .7; */
 }
 
 #container_content {
     background-color: #4F345A;
     width: 48em;
     height: 70%;
-    opacity: 1.0;
+    opacity: 1;
     display: flex;
+    flex-direction: column;
+    z-index: 10;
 }
 
 .column_input {
     display: flex;
     width: 50%;
-    height: 100%;
-    flex-direction: column;
+    height: 60%;
     margin: 10px;
+    justify-content: center;
 }
 
 .column_area {
     display: flex;
     width: 50%;
-    height: 100%;
+    height: 60%;
     flex-direction: column;
     margin-left: 10px;
     margin-right: 10px;
@@ -39,11 +40,34 @@
 }
 
 .container_title {
-    width: 100%;
+    width: 95%;
     height: 5em;
     display: flex;
     justify-content: space-between;
     margin-left: 5px;
     margin-right: 5px;
     align-items: center;
+}
+
+.event_context {
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+
+.input_format {
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.btn_align {
+    justify-self: center;
+    border-style: none;
+    background-color: #29ABE2;
+    padding: 10px;
+    font-size: 18pt;
+}
+
+.label_big {
+    font-size: 20pt;
 }
