--- a/src/app/log-sign/log-sign.component.css
+++ b/src/app/log-sign/log-sign.component.css
@@ -21,6 +21,7 @@
     width: 20em;
     background-color: #FFFFFF;
     margin: 20px;
+    /* display: flex; */
 }
 
 .asset_signlog {
@@ -31,5 +32,51 @@
     width: 250px;
     position: relative;
     margin-top: 5px;
-    align-self: flex-start;
+    justify-self: center;
+}
+
+.logSign {
+    text-align: center;
+}
+
+.btn_align {
+    border-style: none;
+    background-color: #662D91;
+    color: #ffffff;
+    padding: 10px;
+    width: 5em;
+    font-size: 20pt;
+    margin-top: 3em;
+}
+
+.container_btn {
+    width: 100%;
+    bottom: 0;
+    display: flex;
+    align-self: flex-end;
+    justify-content: center;
+}
+
+.container_img {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.form-control {
+    height: 20em;
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    margin-left: 16px;
+}
+
+.login {
+    width: 100%;
+    height: 59%;
+    background-color: #000000;
+}
+
+.label_format {
+    margin-bottom: 1em;
 }
