--- a/src/app/log-sign/log-sign.component.html
+++ b/src/app/log-sign/log-sign.component.html
@@ -1,15 +1,19 @@
 <div class="container_page">
     <div class="container_content">
         <div class="container_signlog">
-            <img src="../assets/Asset 12.svg" class="logo">
-            <p><span (click)="showLog()">Signup</span>|<span (click)="showLog()">Login</span></p>
+            <div class="container_img">
+                <img src="../assets/Asset 12.svg" class="logo">
+            </div>
+            <p class="logSign text_body"><span (click)="showLog()">Signup</span>|<span (click)="showLog()">Login</span></p>
             <div *ngIf="login">
-                <form>
-                    <label>Username</label>
+                <form class="form-control">
+                    <label class="label_format text_body">Username</label>
                     <input>
-                    <label>Password</label>
+                    <label class="label_format text_body">Password</label>
                     <input>
-                    <button>submit</button>
+                    <div class="container_btn">
+                        <button class="btn_align text_main">Sign up</button>
+                    </div>
                 </form>
             </div>
             <div *ngIf="Signup">
@@ -23,7 +27,7 @@
                     <button>submit</button>
                 </form>
             </div>
-            <a routerLink='../Dashboard'>tas</a>
+            <a routerLink='../Dashboard'>click this to progress...</a>
         </div>
         <img src="../assets/Asset 10.svg" class="asset_signlog">
     </div>
