half way polish2

--- a/src/app/account/account.component.css
+++ b/src/app/account/account.component.css
@@ -15,7 +15,7 @@
 #container_content {
     background-color: #4F345A;
     width: 48em;
-    height: 70%;
+    height: 30em;
     opacity: 1.0;
     display: flex;
     flex-direction: column;
