--- a/src/app/calender-create/calender-create.component.html
+++ b/src/app/calender-create/calender-create.component.html
@@ -12,11 +12,11 @@
                         <input>
                     </div>
                     <div class="input_format">
-                        <label name="name">Name of event</label>
+                        <label name="name">Event date</label>
                         <input type="date">
                     </div>
                     <div class="input_format">
-                        <label name="name">Name of event</label>
+                        <label name="name">Location of event</label>
                         <input>
                     </div>
                     <button class="btn_align text_main text_white">Create</button>
