--- a/src/app/gamelist/gamelist.component.html
+++ b/src/app/gamelist/gamelist.component.html
@@ -2,10 +2,33 @@
     <div id="container_content">
         <div class="container_title">
             <h1 class="text_main text_white"> GamesList</h1>
-            <p class="text_main page_symbol">+</p>
+            <img src="../assets/Asset 1.svg" class="add">
             <h2 class="text_white text_main">favorites</h2>
             <h2 class="text_white text_main">sortby</h2>
             <p (click)="gameListOff()" class="text_main page_symbol">X</p>
+        </div>
+        <div class="container_games">
+            <div class="game text_white">
+                <h1 class="text_main game_title">Test</h1>
+                <p class="text_body text_correct">This is some text data that is just here to test and see iff the formating is correct</p>
+            </div>
+            <div class="game text_white">
+                <h1 class="text_main game_title">Test</h1>
+                <p class="text_body text_correct">This is some text data that is just here to test and see iff the formating is correct</p>
+            </div>
+            <div class="game text_white">
+                <h1 class="text_main game_title">Test</h1>
+                <p class="text_body text_correct">This is some text data that is just here to test and see iff the formating is correct</p>
+            </div>
+            <div class="game text_white">
+                <h1 class="text_main game_title">Test</h1>
+                <p class="text_body text_correct">This is some text data that is just here to test and see iff the formating is correct</p>
+            </div>
+            <div class="game text_white">
+                <h1 class="text_main game_title">Test</h1>
+                <p class="text_body text_correct">This is some text data that is just here to test and see iff the formating is correct</p>
+            </div>
+
         </div>
 
     </div>
