--- a/src/app/log-sign/log-sign.component.html
+++ b/src/app/log-sign/log-sign.component.html
@@ -12,19 +12,21 @@
                     <label class="label_format text_body">Password</label>
                     <input>
                     <div class="container_btn">
-                        <button class="btn_align text_main">Sign up</button>
+                        <button class="btn_align text_main">Login</button>
                     </div>
                 </form>
             </div>
             <div *ngIf="Signup">
-                <form>
-                    <label>Username</label><br>
+                <form class="form-control">
+                    <label class="label_format text_body">Username</label>
                     <input>
-                    <label>Password</label><br>
+                    <label class="label_format text_body">Password</label>
                     <input>
-                    <label>Retype Password</label><br>
+                    <label class="label_format text_body">Retype Password</label>
                     <input>
-                    <button>submit</button>
+                    <div class="container_btn">
+                        <button class="btn_align text_main">Sign-up</button>
+                    </div>
                 </form>
             </div>
             <a routerLink='../Dashboard'>click this to progress...</a>
