--- a/src/app/splash/splash.component.css
+++ b/src/app/splash/splash.component.css
@@ -1,6 +1,6 @@
 .container_splash {
-    max-width: 80%;
-    min-width: 80%;
+    width: 80em;
+    /* min-width: 80%; */
     height: 100em;
     margin: 0 auto;
     background-color: #FFFFFF;
