--- a/src/app/calender-create/calender-create.component.css
+++ b/src/app/calender-create/calender-create.component.css
@@ -14,7 +14,7 @@
 #container_content {
     background-color: #4F345A;
     width: 48em;
-    height: 70%;
+    height: 30em;
     opacity: 1;
     display: flex;
     flex-direction: column;
