--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -2,7 +2,7 @@
     <div id="container_content">
         <div class="container_title">
             <h1 class="text_main text_white"> My Account</h1>
-            <p (click)="accountOff()">X</p>
+            <img src="../assets/Asset 3.svg" (click)="accountOff()" class="img_close">
         </div>
         <div class="container_input">
             <div class="account_graphic">
