--- a/src/app/calender-create/calender-create.component.html
+++ b/src/app/calender-create/calender-create.component.html
@@ -1,8 +1,8 @@
 <div class="overLay">
-    <div id="container_content">
+    <div class="container_content">
         <div class="container_title">
             <h1 class="text_main text_white">Create Event</h1>
-            <p (click)="hideEvent()" class="text_white">X</p>
+            <img src="../assets/Asset 3.svg" (click)="hideEvent()" class="img_close">
         </div>
         <div class="event_context">
             <div class="column_input text_body text_white">
