--- a/src/app/gamelist/gamelist.component.html
+++ b/src/app/gamelist/gamelist.component.html
@@ -5,7 +5,7 @@
             <img src="../assets/Asset 1.svg" class="add">
             <h2 class="text_white text_main">favorites</h2>
             <h2 class="text_white text_main">sortby</h2>
-            <p (click)="gameListOff()" class="text_main page_symbol">X</p>
+            <img src="../assets/Asset 3.svg" (click)="gameListOff()" alt="" class="img_close">
         </div>
         <div class="container_games">
             <div class="game text_white">
