--- a/src/app/account/account.component.css
+++ b/src/app/account/account.component.css
@@ -1,7 +1,7 @@
 .overLay {
     width: 100%;
     height: 100vh;
-    background-color: #000000;
+    background-color: rgba(0, 0, 0, 0.7);
     position: fixed;
     left: 0;
     top: 0;
@@ -9,7 +9,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    /* opacity: .7; */
 }
 
 #container_content {
