--- a/src/app/calender-create/calender-create.component.css
+++ b/src/app/calender-create/calender-create.component.css
@@ -1,7 +1,7 @@
 .overLay {
     width: 100%;
     height: 100vh;
-    background-color: #000000;
+    background-color: rgba(0, 0, 0, 0.7);
     position: fixed;
     left: 0;
     top: 0;
@@ -11,14 +11,14 @@
     align-items: center;
 }
 
-#container_content {
+.container_content {
     background-color: #4F345A;
     width: 48em;
     height: 30em;
     opacity: 1;
     display: flex;
     flex-direction: column;
-    z-index: 10;
+    z-index: 13;
 }
 
 .column_input {
@@ -70,4 +70,8 @@
 
 .label_big {
     font-size: 20pt;
+}
+
+.img_close {
+    width: 2em;
 }
