--- a/src/app/gamelist/gamelist.component.css
+++ b/src/app/gamelist/gamelist.component.css
@@ -1,7 +1,7 @@
 .overLay {
     width: 100%;
     height: 100vh;
-    background-color: #000000;
+    background-color: rgba(0, 0, 0, 0.7);
     position: fixed;
     left: 0;
     top: 0;
@@ -66,4 +66,8 @@
 .game:hover {
     background-color: #29ABE2;
     transition: 0.7s;
+}
+
+.img_close {
+    width: 2em;
 }
