--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -16,11 +16,11 @@
                         <form>
                             <div class="form-group">
                                 <label for="old_pwd" class="text_white text_body">Old password</label>
-                                <input name="old_pwd">
+                                <input name="old_pwd" type="password">
                             </div>
                             <div class="form-group">
                                 <label for="new_pwd" class="text_white text_body">New password</label>
-                                <input name="new_pwd">
+                                <input name="new_pwd" type="password">
                             </div>
                             <button class="btn_change text_main">Change</button>
                         </form>
