--- a/src/app/log-sign/log-sign.component.html
+++ b/src/app/log-sign/log-sign.component.html
@@ -10,7 +10,7 @@
                     <label class="label_format text_body">Username</label>
                     <input>
                     <label class="label_format text_body">Password</label>
-                    <input>
+                    <input type="password">
                     <div class="container_btn">
                         <button class="btn_align text_main">Login</button>
                     </div>
@@ -21,9 +21,9 @@
                     <label class="label_format text_body">Username</label>
                     <input>
                     <label class="label_format text_body">Password</label>
-                    <input>
+                    <input type="password">
                     <label class="label_format text_body">Retype Password</label>
-                    <input>
+                    <input type="password">
                     <div class="container_btn">
                         <button class="btn_align text_main">Sign-up</button>
                     </div>
