--- a/src/app/splash/splash.component.html
+++ b/src/app/splash/splash.component.html
@@ -5,7 +5,7 @@
             <h1 class="text_main padding">Gamebox</h1>
         </div>
         <div class="nav_spash_right">
-            <a class="nav text_body" href="#">Features</a>
+            <a class="nav text_body" (click)="scrollTolFeature()">Features</a>
             <a class="nav text_body" href="#">picks</a>
             <a class="nav text_body" routerLink="../LogSign">signup</a>
 
@@ -26,7 +26,7 @@
             <img src="../assets/Asset 11.svg" class="big_img">
         </div>
     </div>
-    <div class="splash_feature_container">
+    <div class="splash_feature_container" id="splash_feature_container">
         <p class="text_main big_alt">Features</p>
         <div class="text_points">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis explicabo laborum voluptatibus sint, corrupti maiores tempora a asperiores. Mollitia repellendus tempora illum non ipsa commodi, provident quod magni amet ipsam.</p>
