--- a/src/app/new-game/new-game.component.css
+++ b/src/app/new-game/new-game.component.css
@@ -5,7 +5,7 @@
     position: fixed;
     left: 0;
     top: 0;
-    z-index: 9;
+    z-index: 12;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,4 +19,40 @@
     display: flex;
     flex-direction: column;
     z-index: 13;
+}
+
+.container_title {
+    width: 95%;
+    height: 5em;
+    display: flex;
+    justify-content: space-between;
+    margin-left: 5px;
+    margin-right: 5px;
+    align-items: center;
+}
+
+.container_input {
+    height: 20em;
+    width: 95%;
+    margin-left: 18px;
+}
+
+.form-group {
+    display: flex;
+    flex-direction: column;
+}
+
+.container_btn {
+    width: 100%;
+    height: 30%;
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+}
+
+.btn_align {
+    border-style: none;
+    background-color: #29ABE2;
+    padding: 10px;
+    font-size: 18pt;
 }
