auth and games database implemented

--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -7,7 +7,7 @@
         <div class="container_input">
             <div class="account_graphic">
                 <img src="../assets/Asset 11.svg" class="img_size">
-                <h1 class="text_main text_white align">Boxy2110</h1>
+                <h1 class="text_main text_white align">{{accountName}}</h1>
             </div>
             <div class="account_input">
                 <div class="container_password">
