--- a/src/app/splash/splash.component.html
+++ b/src/app/splash/splash.component.html
@@ -6,7 +6,7 @@
         </div>
         <div class="nav_spash_right">
             <a class="nav text_body" (click)="scrollTolFeature()">Features</a>
-            <a class="nav text_body" href="#">picks</a>
+            <a class="nav text_body" routerLink="../LogSign">picks</a>
             <a class="nav text_body" routerLink="../LogSign">signup</a>
 
             <div class="log_box">
