--- a/src/app/gamelist/gamelist.component.css
+++ b/src/app/gamelist/gamelist.component.css
@@ -19,6 +19,49 @@
     opacity: 1.0;
 }
 
+.container_overlay {
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.7);
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 11;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container_game_overlay {
+    width: 80%;
+    height: 30em;
+    z-index: 12;
+    background-color: #ffffff;
+}
+
+.container_overlay_newGame {
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.7);
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 12;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container_content_newGame {
+    background-color: #4F345A;
+    width: 48em;
+    height: 30em;
+    opacity: 1;
+    display: flex;
+    flex-direction: column;
+    z-index: 13;
+}
+
 .container_title {
     width: 95%;
     height: 5em;
@@ -75,4 +118,40 @@
 
 .img_close {
     width: 2em;
+}
+
+.container_title_newGame {
+    width: 95%;
+    height: 5em;
+    display: flex;
+    justify-content: space-between;
+    margin-left: 5px;
+    margin-right: 5px;
+    align-items: center;
+}
+
+.container_input {
+    height: 20em;
+    width: 95%;
+    margin-left: 18px;
+}
+
+.form-group {
+    display: flex;
+    flex-direction: column;
+}
+
+.container_btn {
+    width: 100%;
+    height: 30%;
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+}
+
+.btn_align {
+    border-style: none;
+    background-color: #29ABE2;
+    padding: 10px;
+    font-size: 18pt;
 }
