--- a/src/app/log-sign/log-sign.component.css
+++ b/src/app/log-sign/log-sign.component.css
@@ -80,3 +80,10 @@
 .label_format {
     margin-bottom: 1em;
 }
+
+.btn_google {
+    max-width: 6em;
+    max-height: 2em;
+    box-shadow: 0px 0px 10px #000000;
+    top: 5;
+}
