--- a/src/app/log-sign/log-sign.component.css
+++ b/src/app/log-sign/log-sign.component.css
@@ -87,3 +87,24 @@
     box-shadow: 0px 0px 10px #000000;
     top: 5;
 }
+
+.overlay {
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.7);
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* opacity: .7; */
+}
+
+.container_alts {
+    background-color: #ffffff;
+    width: 48em;
+    height: 70%;
+    opacity: 1.0;
+}
